# denario

./: .gitignore  README.MD
denario/: .env.template  .gitignore  Cargo.toml  README.MD  README2.md  denarios_sqlite - copia.db  docker-compose.yml  run_dev.sh  serve-dev.bat
denario-gi/: README.md  package-lock.json  package.json
denario-gi/src/: App.vue  main.ts
denario-gi/src/api/: api.js  balances.js  categories.js  records.js
denario-gi/src/helpers/: denario_dates.js
denario-gi/src/modules/dash/: BalanceCard.vue  (+3 more)
denario-gi/src/shared/: NavbarMain.vue
denario-gi/src/styles/: styles.scss
denario-gi/src/views/: HomeView.vue
denario-i/: README.md  package.json
denario-i/src/: App.vue
denario-i/src/shared/: NavbarMain.vue
denario-i/src/views/: HomeView.vue
denario/migrations/2023-06-11-000959_create_categories/: up.sql
denario/migrations/2023-06-11-010148_create_records/: up.sql
denario/migrations/2023-06-11-011216_create_credits/: down.sql  up.sql
denario/public/: index.html
denario/public/ui/: index.html
denario/src/: main.rs  schema.rs  seeds.rs
denario/src/features/: app_setup.rs  app_status.rs  balance.rs  categories.rs  credits.rs  dolars.rs  mod.rs  records.rs
denario/src/models/: balance.rs  categories_model.rs  category_model.rs  credit_model.rs  credits_model.rs  dolar_model.rs  mod.rs  record_model.rs  records_model.rs
denario/ui/: index.html
gui/: index.html  package.json
gui/src/components/: HelloWorld.vue
py-parse-cvs/: excel-cvs.txt  insert_massive_records.sql  py-parse.py  untitled.sql  untitled2.sql
(+7 files in other folders)
